# fit-projects

./: .gitignore  Makefile  README.md  dokumentace.tex  hodnoceni.txt  nums100.txt
1MIT_ZS_2019/AVS/projekt1/Step2/: CMakeLists.txt  main.cpp  neuron.cpp  neuron.h
2BIT_LS_2018/IZG/izg1718/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  merlinCompilationTest.sh
2BIT_LS_2018/IZG/izg1718/doc/html/: QuadExample-example.html  annotated.html  buffer_8h.html  buffer_8h_source.html  bunny_8c.html  bunny_8h.html  bunny_8h_source.html  camera_8c.html  camera_8h.html  camera_8h_source.html  classes.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_df997ef5cbe81af8266600b381d65502.html  examples.html  files.html  functions.html  functions_vars.html  fwd_8h.html  fwd_8h_source.html  globals.html  globals_8c.html  globals_8h.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_func_d.html  globals_func_i.html  globals_func_l.html  globals_func_m.html  globals_func_n.html  globals_func_o.html  globals_func_r.html  globals_func_v.html  globals_func_z.html  globals_i.html  globals_l.html  globals_n.html  globals_o.html  (+57 more)
2BIT_LS_2018/IZG/izg1718/doc/html/search/: all_10.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_d.js  files_3.js  functions_4.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  pages_0.js  search.js  typedefs_2.js  typedefs_8.js  variables_2.js  variables_4.js
2BIT_LS_2018/IZG/izg1718/doc/latex/: QuadExample-example.tex  TriangleExample-example.tex  annotated.tex  bunny_8c.tex  bunny_8h.tex  camera_8c.tex  camera_8h.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_df997ef5cbe81af8266600b381d65502.tex  examples.tex  files.tex  fwd_8h.tex  globals_8h.tex  gpu_8h.tex  group__cpu__side.tex  group__gpu__side.tex  group__init.tex  group__task2.tex  index.tex  linearAlgebra_8c.tex  linearAlgebra_8h.tex  main_8c.tex  modules.tex  mouseCamera_8c.tex  mouseCamera_8h.tex  program_8h.tex  quadExample_8c.tex  quadExample_8h.tex  refman.tex  structGPUFragmentAttributes.tex  structGPUFragmentShaderInput.tex  structGPUTriangle.tex  structGPUVertexIndexing.tex  structGPUVertexPullerConfiguration.tex  structGPUVertexPullerOutput.tex  structGPUVertexShaderInput.tex  structMat4.tex  structPhongVariables.tex  structQuadExampleVariables.tex  structTriangleExampleVariables.tex  (+13 more)
2BIT_LS_2018/IZG/izg1718/examples/: triangleExample.c  triangleExample.h
2BIT_LS_2018/IZG/izg1718/gpu/: gpu.cpp
2BIT_LS_2018/IZG/izg1718/sdl2/win64/cmake/: SDL2Targets-debug.cmake  SDL2Targets-release.cmake  SDL2Targets.cmake
2BIT_LS_2018/IZG/izg1718/student/: buffer.h  bunny.c  bunny.h  camera.c  camera.h  fwd.h  globals.c  globals.h  gpu.h  linearAlgebra.c  linearAlgebra.h  main.c  mouseCamera.c  mouseCamera.h  program.h  student_cpu.c  student_cpu.h  student_pipeline.c  student_pipeline.h  student_shader.c  student_shader.h  swapBuffers.c  swapBuffers.h  uniforms.h  vertexPuller.h
2BIT_LS_2018/IZG/izg1718/tests/: conformanceTests.cpp  conformanceTests.h  performanceTest.cpp
2BIT_LS_2018/IZG/izg_lab_06/: CMakeLists.txt  Doxyfile  linux_create_makefile.sh
2BIT_LS_2018/IZG/izg_lab_06/doc/html/: QuadExample-example.html  TriangleExample-example.html  annotated.html  bunny_8c.html  bunny_8h.html  bunny_8h_source.html  camera_8c.html  camera_8h.html  camera_8h_source.html  classes.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_df997ef5cbe81af8266600b381d65502.html  examples.html  files.html  functions.html  functions_vars.html  fwd_8h.html  fwd_8h_source.html  globals.html  globals_8h_source.html  globals_b.html  globals_c.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_func_c.html  globals_func_f.html  globals_func_g.html  globals_func_p.html  globals_func_s.html  globals_func_t.html  globals_g.html  globals_m.html  globals_p.html  globals_q.html  globals_r.html  globals_t.html  globals_type.html  globals_v.html  (+56 more)
2BIT_LS_2018/IZG/izg_lab_06/doc/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_3.js  defines_0.js  defines_1.js  files_0.js  files_6.js  files_7.js  functions_1.js  functions_3.js  functions_5.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  groups_0.js  groups_1.js  (+18 more)
2BIT_LS_2018/IZG/izg_lab_06/doc/latex/: annotated.tex  buffer_8h.tex  bunny_8c.tex  bunny_8h.tex  camera_8c.tex  camera_8h.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_df997ef5cbe81af8266600b381d65502.tex  examples.tex  files.tex  fwd_8h.tex  globals_8c.tex  group__draw.tex  group__fs.tex  group__shader__side.tex  group__task1.tex  group__task3.tex  group__vs.tex  index.tex  linearAlgebra_8c.tex  main_8c.tex  modules.tex  mouseCamera_8c.tex  mouseCamera_8h.tex  program_8h.tex  refman.tex  structBunnyVertex.tex  structGPUFragmentShaderOutput.tex  structGPUPrimitive.tex  structGPUTriangleList.tex  structGPUVertexPullerHead.tex  structGPUVertexShaderOutput.tex  structMat4.tex  structPhongVariables.tex  structVec3.tex  structVec4.tex  student_8c.tex  student_8h.tex  student__cpu_8c.tex  student__cpu_8h.tex  (+4 more)
2BIT_LS_2018/IZG/izg_lab_06/examples/: quadExample.c  quadExample.h
2BIT_LS_2018/IZG/izg_lab_06/opengl/: opengl.c  opengl.h
2BIT_LS_2018/IZG/izg_lab_06/student/: bunny.h  camera.c  camera.h  fwd.h  linearAlgebra.c  linearAlgebra.h  main.c  mouseCamera.c  mouseCamera.h  program.c  program.h  student.c  student.h
(+787 files in other folders)
